--- a/systemjs-ngc-rollup/package.json
+++ b/systemjs-ngc-rollup/package.json
@@ -8,8 +8,11 @@
     "serve": "lite-server -c bs-config.dev.json",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "cleanup": "rimraf src/**/*.ngfactory.ts src/**/*.js src/**/*.js.map src/**/*.metadata.json src/**/*.ngsummary.json aot dist",
+
     "build:aot": "npm run cleanup && ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
-    "serve:aot": "npm run build:aot && lite-server -c bs-config.aot.json"
+    "serve:aot": "npm run build:aot && lite-server -c bs-config.aot.json",
+
+    "check": "source-map-explorer dist/build.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +34,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.1",
+    "source-map-explorer": "^1.3.3",
     "systemjs": "^0.20.12",
     "typescript": "^2.2.2"
   }
