--- a/systemjs-ngc-rollup/package.json
+++ b/systemjs-ngc-rollup/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:watch": "npm run cleanup && tsc -p tsconfig.json -w",
+  
+    "build:watch": "npm run cleanup:aot && tsc -p tsconfig.json -w",
     "serve": "lite-server -c bs-config.dev.json",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "cleanup": "rimraf src/**/*.ngfactory.ts src/**/*.js src/**/*.js.map src/**/*.metadata.json src/**/*.ngsummary.json aot dist",
 
-    "build:aot": "npm run cleanup && ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
-    "serve:aot": "npm run build:aot && lite-server -c bs-config.aot.json",
+    "cleanup:jit": "rimraf build-jit",
+    "copy:jit": "copyfiles -f \"src/**/*.html\" build-jit",
+    "build:jit": "npm run cleanup:jit && npm run copy:jit && tsc -p tsconfig.jit.json && rollup -c rollup-config.jit.js",
+    "serve:jit": "lite-server -c bs-config.jit.json",
 
-    "check": "source-map-explorer dist/build.js"
+    "check:jit": "source-map-explorer build-jit/build.js",
+
+    "cleanup:aot": "rimraf \"src/**/*.{ngfactory.ts,js,js.map,metadata.json,ngsummary.json}\" aot build-aot",
+    "build:aot": "npm run cleanup:aot && ngc -p tsconfig.aot.json && rollup -c rollup-config.aot.js",
+    "serve:aot": "lite-server -c bs-config.aot.json",
+
+    "check:aot": "source-map-explorer build-aot/build.js"
+
   },
   "author": "",
   "license": "ISC",
@@ -22,20 +31,27 @@
     "@angular/core": "^4.0.2",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
+  
     "core-js": "^2.4.1",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.0.2",
-    "concurrently": "^3.4.0",
+
+    "concurrently": "^3.4.0",  
+    "systemjs": "^0.20.12",
     "lite-server": "^2.3.0",
+
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "source-map-explorer": "^1.3.3",
-    "systemjs": "^0.20.12",
-    "typescript": "^2.2.2"
+    "rollup-plugin-uglify": "^1.0.1",   
+    
+    "typescript": "^2.2.2",
+
+    "copyfiles": "^1.2.0",
+
+    "source-map-explorer": "^1.3.3"
   }
 }
