--- a/systemjs-ngc-rollup/package.json
+++ b/systemjs-ngc-rollup/package.json
@@ -5,19 +5,19 @@
   "main": "index.js",
   "scripts": {
   
-    "build:watch": "npm run cleanup:aot && tsc -p tsconfig.json -w",
+    "build:watch": "npm run clean:aot && tsc -p tsconfig.json -w",
     "serve": "lite-server -c bs-config.dev.json",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
 
-    "cleanup:jit": "rimraf build-jit",
+    "clean:jit": "rimraf build-jit",
     "copy:jit": "copyfiles -f \"src/**/*.html\" build-jit",
-    "build:jit": "npm run cleanup:jit && npm run copy:jit && tsc -p tsconfig.jit.json && rollup -c rollup-config.jit.js",
+    "build:jit": "npm run clean:jit && npm run copy:jit && tsc -p tsconfig.jit.json && rollup -c rollup-config.jit.js",
     "serve:jit": "lite-server -c bs-config.jit.json",
 
     "check:jit": "source-map-explorer build-jit/build.js",
 
-    "cleanup:aot": "rimraf \"src/**/*.{ngfactory.ts,js,js.map,metadata.json,ngsummary.json}\" aot build-aot",
-    "build:aot": "npm run cleanup:aot && ngc -p tsconfig.aot.json && rollup -c rollup-config.aot.js",
+    "clean:aot": "rimraf \"src/**/*.{ngfactory.ts,js,js.map,metadata.json,ngsummary.json}\" aot build-aot",
+    "build:aot": "npm run clean:aot && ngc -p tsconfig.aot.json && rollup -c rollup-config.aot.js",
     "serve:aot": "lite-server -c bs-config.aot.json",
 
     "check:aot": "source-map-explorer build-aot/build.js"
