--- a/ngc-webpack/package.json
+++ b/ngc-webpack/package.json
@@ -4,23 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:dll": "npm run clean:awcache && npm run clean:dll && webpack",
+    "serve:dev": "webpack-dev-server --open --inline --hot",
+    "start": "npm run serve:dev",
 
-    "build:dll": "webpack",
-
-    "dev:hmr": "webpack-dev-server --open --inline --hot",
-
-    "build:watch": "npm run clean:aot && tsc -p tsconfig.json -w",
-    "serve": "lite-server -c bs-config.dev.json",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "clean:jit": "rimraf build-jit",
-    "copy:jit": "copyfiles -f \"src/**/*.html\" build-jit",
-    "build:jit": "npm run clean:jit && npm run copy:jit && tsc -p tsconfig.jit.json && rollup -c rollup-config.jit.js",
-    "serve:jit": "lite-server -c bs-config.jit.json",
-    "check:jit": "source-map-explorer build-jit/build.js",
-    "clean:aot": "rimraf \"src/**/*.{ngfactory.ts,js,js.map,metadata.json,ngsummary.json}\" aot build-aot",
-    "build:aot": "npm run clean:aot && ngc -p tsconfig.aot.json && rollup -c rollup-config.aot.js",
-    "serve:aot": "lite-server -c bs-config.aot.json",
-    "check:aot": "source-map-explorer build-aot/build.js"
+    "build:ngc": "npm run clean:ngc && ngc -p tsconfig.aot.json",
+    "build:prod": "npm run build:ngc && npm run clean:prod && webpack",
+    
+    "clean:dll": "rimraf dist/dll",
+    "clean:awcache": "rimraf dist/awcache",
+    "clean:ngc": "rimraf dist/aot",
+    "clean:prod": "npm run clean:awcache && rimraf dist/prod"
   },
   "author": "",
   "license": "ISC",
@@ -30,22 +24,28 @@
     "@angular/core": "^4.0.2",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
-  
     "core-js": "^2.4.1",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.0.2",
-
-    "awesome-typescript-loader": "3.1.2",
-    "bell-on-bundler-error-plugin": "1.0.8",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
-    
+    "@types/node": "^7.0.13",
+    "add-asset-html-webpack-plugin": "^1.0.2",
+    "angular2-router-loader": "^0.3.5",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "3.1.2",
+    "bell-on-bundler-error-plugin": "1.0.8",
+    "html-webpack-plugin": "^2.28.0",
+    "raw-loader": "^0.5.1",
     "source-map-explorer": "^1.3.3",
+    "source-map-loader": "^0.2.1",
+    "ts-helpers": "^1.1.2",
     "typescript": "^2.2.2",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
   }
 }
